Added shell sort

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <button onclick="visualizeSelectionSort()">Selection Sort</button>
       <button onclick="visualizeInsertionSort()">Insertion Sort</button>
       <button onclick="visualizeQuickSort()">Quick Sort</button>
+      <button onclick="visualizeShellSort()">Shell Sort</button>
       <button onclick="visualizeMergeSort()">Merge Sort</button>
     </div>
 
